fix: arreglo de flicker de css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,4 +24,5 @@ body {
   font-family:"Inter",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
   max-width: 100vw;
   overflow-x: hidden;
+  display:flex
 }
